* The core libraries have been appropriately named. `reference_counting.cuh` has been changed to `corelib.cuh`, and `reference_counting.py` has been changed to `corelib.py`.
* Fixed the compilation of Cuda virtual closure destructors on the device.
* TODO: Replace the 3rd party lib OrderedDictionary with the inbuilt one in .NET 9.

2.15.6 (12/1/2024)

* Actually made the __cluster_dim__ annotations work.

2.15.4-5 (12/1/2024)

* Modified the Cuda codegen so it supports __cluster_dim__ annotations.

2.15.3 (10/6/2024)

* Got rid of the compiler error in `generalize`.

2.15.2 (10/1/2024)

* Removed the printfn I accidentally left in.

2.15.1 (10/1/2024)

* Added the missing YExists and YForall cases in the is_unify in the partial evaluator.

2.15.0 (9/19/2024)

Added the stack mutable layout type into the language.

* In the Cuda codegen, indexing into layout types now generates a reference type in the compiled code.

2.14.2 (9/17/2024)

* Modified the way int literals are printed in the Cuda backend for compatibility with Godbolt (Compiler Explorer).

2.14.1 (9/16/2024)

* Added the missing YLit case in the typecase unifier in the partial evaluator.

2.14.0 (9/9/2024)

Changed the indexing semantics of the layout types in the Cuda backend. From here on out, their destructured variables will be code generated as references.

2.13.15 (9/8/2024)

* Minor change to the way the main type vars are defined in the Python backend. Intellisense will stop complaining about vars being used in type annotations.

2.13.14 (9/6/2024)

* Changed the FreeVars op so it uses {} instead of () as the terminator. Unit types unlike empty records don't mix well with tensors.

2.13.13 (9/5/2024)

* Non-default literals can now be safely converted by annotations as long as they are immediate. Example: `real 0 : f32`.

2.13.12 (8/26/2024)

* Fixed a type var shadowing bug during module opens in the top down segment.

2.13.11 (8/21/2024)

Same as prev, VS Code marketplace is behaving strangely.